# lem-in

./: .gitignore  CMakeLists.txt  Makefile  lem-in  test  test2  visual
includes/: lem_in.h
libft/: Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: ft_count_len_bit.c  ft_count_len_bits.c  ft_count_nbrs.c  ft_find.c  ft_find_types.c  ft_free_arr.c  ft_init_default_all.c  ft_init_flags.c  ft_init_modific.c  ft_init_precision.c  ft_init_specific.c  ft_init_types.c  ft_init_width.c  ft_is_spec.c  ft_itoa_base.c  ft_list_counter.c  ft_print_precision.c  ft_print_width.c  ft_printf.c  ft_sqrt.c  ft_strchr.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strnew.c  ft_strsub.c  ft_strupper.c  ft_type_b.c  ft_type_c.c  ft_type_cl.c  ft_type_d.c  ft_type_hd.c  ft_type_hhd.c  ft_type_hhn.c  ft_type_hho.c  ft_type_hhu.c  ft_type_hhx.c  ft_type_hn.c  ft_type_ho.c  ft_type_hu.c  (+31 more)
srcs/: ft_error_room.c  ft_errors.c  ft_find_command.c  ft_find_first.c  ft_find_links.c  ft_find_road.c  ft_find_second.c  ft_init_in.c  ft_init_rooms.c  ft_parse_end_room.c  ft_parse_links.c  ft_parse_noa.c  ft_parse_rooms.c  ft_parse_start.c  ft_parse_start_room.c  ft_send_ants.c  lem_in.c  main.c  visual.c
